Add new page, update hashcode, add new exceptions in classes and tests